Tools/jenkins_stateful_set/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins

spec:
  selector:
    app: jenkins

  ports:
  - port: 8080
    targetPort: 8080
    name: http

  - port: 50000
    targetPort: 50000
    name: agent

  type: ClusterIP
